--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@vkontakte/vk-miniapps-deploy": "0.0.25",
     "@vkontakte/vkui": "5.1.0",
     "babel-eslint": "^10.1.0",
+    "classnames": "^2.3.2",
     "eruda": "^2.4.1",
     "eruda-code": "^2.0.0",
     "eruda-dom": "^2.0.0",
