--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "eruda-dom": "^2.0.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "use-sound": "^4.0.1"
   },
   "devDependencies": {
     "@types/react": "^17.0.2",
